fix: notes alignment

--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -1,6 +1,7 @@
 .container {
   margin: 0 auto 0 auto;
   max-width: 520px;
+  width: 100%;
 
   .content {
     display: flex;
